# BotWIthKafka

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
src/: config.py  handler.py  logging_config.py  main.py  model.py
src/service/: get_exchange_rate.py
