[project]
name = "bot-tets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.1",
    "faststream[kafka]>=0.5.25",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "structlog>=24.4.0",
    "uvicorn>=0.31.0",
]

[tool.uv]
dev-dependencies = [
    "rich>=13.9.1",
]
